devops/terraform/modules/k8s/istio/grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: monitoring
spec:
  hosts:
  - "grafana.test.com"
  gateways:
  - grafana-gw
  http:
  - route:
    - destination:
        host: grafana.monitoring.svc.cluster.local
        port:
          number: 80
      weight: 100
