devops/terraform/modules/k8s/istio/kibana-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana-vs
  namespace: logging
spec:
  hosts:
  - "kibana.test.com"
  gateways:
  - kibana-gw
  http:
  - route:
    - destination:
        host: kibana-kibana.default.svc.cluster.local
        port:
          number: 5601
      weight: 100
