devops/terraform/modules/k8s/istio/woocommerce-vs.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: woocommerce-vs
  namespace: woocomm
spec:
  hosts:
  - "woocomm.test.com"
  gateways:
  - woocommerce-gw
  http:
  - route:
    - destination:
        host: woocommerce-wordpress.default.svc.cluster.local
        port:
          number: 80
      weight: 100
